[project]
name = "tally"
version = "1.0.0"
description = "Tally — Payments & Billing API (Stripe-style FastAPI look-alike for the MCPCloud showcase)"
requires-python = ">=3.12"
dependencies = [
    # `[standard]` pulls in the `fastapi` CLI (`fastapi dev`/`run`) and uvicorn.
    "fastapi[standard]>=0.115",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
